--- a/frontend/src/Components/Calculating/Calculating.css
+++ b/frontend/src/Components/Calculating/Calculating.css
@@ -1,30 +1,29 @@
-.submit-button {
+.calculating {
   align-items: flex-start;
   background-size: 100% 100%;
   cursor: pointer;
   display: flex;
-  height: 32px;
-  justify-content: flex-end;
-  left: 686px;
-  min-width: 104px;
-  padding: 7.8px 29.0px;
+  height: 42px;
+  left: 888px;
+  min-width: 187px;
+  padding: 6px 39px;
   position: absolute;
-  top: 202px;
-  transition: all 0.2s ease-in;
+  top: 1211px;
+  transition: all 0.2s ease;
 }
 
-.submit-button:hover {
+.calculating:hover {
   transform: scale(1.1);
 }
 
-.submit {
+.calculate {
   color: var(--white);
   font-family: var(--font-family-roboto);
-  font-size: var(--font-size-xxxs);
+  font-size: var(--font-size-m);
   font-weight: 700;
-  height: 16px;
+  height: 29px;
   letter-spacing: 0;
-  min-width: 45px;
+  min-width: 106px;
   text-align: center;
 }
 
