--- a/frontend/src/Components/FriendButton/FriendButton.css
+++ b/frontend/src/Components/FriendButton/FriendButton.css
@@ -1,6 +1,6 @@
 .friend-button-1 {
   align-items: flex-start;
-  background-color: var(--mist-gray-2);
+  background-color: #c4c4c459;
   box-shadow: 0px 4px 4px #00000040;
   cursor: pointer;
   display: flex;
