--- a/frontend/src/Components/RequestFriendListPage/RequestFriendListPage.css
+++ b/frontend/src/Components/RequestFriendListPage/RequestFriendListPage.css
@@ -1,16 +1,16 @@
-.friend-request-list-page {
+.request-friend-list-page {
   align-items: flex-start;
   display: flex;
   width: 1440px;
 }
 
-.overlap-group6 {
+.overlap-group5 {
   height: 1364px;
   position: relative;
   width: 1440px;
 }
 
-.temp-name-2 {
+.temp-name {
   height: 29px;
   left: 110px;
   letter-spacing: 0;
@@ -20,7 +20,7 @@
   width: 123px;
 }
 
-.overlap-group-8 {
+.overlap-group-1 {
   align-items: flex-start;
   background-color: var(--white);
   border-radius: 10px;
@@ -30,17 +30,17 @@
   min-width: 1009px;
   padding: 16px 31px;
   position: absolute;
-  top: 173px;
+  top: 318px;
 }
 
-.friend-picture-2 {
+.friend-picture {
   background-color: var(--mist-gray);
   border-radius: 27px/26.5px;
   height: 53px;
   width: 54px;
 }
 
-.flex-col-1 {
+.flex-col {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
@@ -50,14 +50,14 @@
   width: 124px;
 }
 
-.friend-name-2 {
+.friend-name {
   height: 16px;
   letter-spacing: 0;
   min-width: 80px;
   text-align: center;
 }
 
-.request-message-1 {
+.request-message {
   align-self: flex-end;
   height: 15px;
   letter-spacing: 0;
@@ -66,7 +66,7 @@
   text-align: center;
 }
 
-.overlap-group-4 {
+.overlap-group {
   align-items: center;
   align-self: center;
   background-size: 100% 100%;
@@ -75,17 +75,17 @@
   margin-bottom: 6.0px;
   margin-left: 646px;
   min-width: 59px;
-  padding: 0 10px;
+  padding: 0 7px;
 }
 
-.accept {
+.request {
   height: 14px;
   letter-spacing: 0;
-  min-width: 38px;
+  min-width: 45px;
   text-align: center;
 }
 
-.overlap-group2-3 {
+.overlap-group2 {
   align-items: flex-start;
   background-color: var(--white);
   border-radius: 10px;
@@ -95,10 +95,10 @@
   min-width: 1009px;
   padding: 16px 31px;
   position: absolute;
-  top: 259px;
+  top: 404px;
 }
 
-.overlap-group3-2 {
+.overlap-group3 {
   align-items: flex-start;
   background-color: var(--white);
   border-radius: 10px;
@@ -108,10 +108,10 @@
   min-width: 1009px;
   padding: 16px 31px;
   position: absolute;
-  top: 345px;
+  top: 490px;
 }
 
-.top-bar-2 {
+.top-bar {
   height: 85px;
   left: 1px;
   position: absolute;
@@ -119,7 +119,7 @@
   width: 1439px;
 }
 
-.overlap-group-5 {
+.overlap-group4 {
   height: 38px;
   left: 0;
   position: absolute;
@@ -127,7 +127,7 @@
   width: 1440px;
 }
 
-.overlap-group-6 {
+.overlap-group-2 {
   height: 36px;
   left: 362px;
   position: absolute;
@@ -135,8 +135,8 @@
   width: 153px;
 }
 
-.unsure-button-2 {
-  background-color: var(--mist-gray);
+.unsure-button {
+  background-color: var(--white);
   box-shadow: 0px 4px 4px #00000040;
   cursor: pointer;
   height: 36px;
@@ -146,7 +146,7 @@
   width: 153px;
 }
 
-.unsure-2 {
+.unsure {
   -webkit-text-stroke: 0.5px var(--black);
   height: 20px;
   left: 18px;
@@ -157,7 +157,36 @@
   width: 115px;
 }
 
-.friend-button-2 {
+.overlap-group1 {
+  height: 36px;
+  left: 515px;
+  position: absolute;
+  top: 0;
+  width: 153px;
+}
+
+.unsure-button-1 {
+  background-color: var(--mist-gray);
+  box-shadow: 0px 4px 4px #00000040;
+  cursor: pointer;
+  height: 36px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 153px;
+}
+
+.unsure-1 {
+  -webkit-text-stroke: 0.5px var(--black);
+  height: 19px;
+  left: 36px;
+  letter-spacing: 0;
+  position: absolute;
+  text-align: center;
+  top: 8px;
+}
+
+.friend-button {
   align-items: flex-start;
   cursor: pointer;
   display: flex;
@@ -168,7 +197,7 @@
   top: 0;
 }
 
-.overlap-group-7 {
+.overlap-group2-1 {
   align-items: flex-start;
   background-color: var(--white);
   box-shadow: 0px 4px 4px #00000040;
@@ -178,9 +207,7 @@
   padding: 3.5px 17.5px;
 }
 
-.place-3,
-.place-4,
-.find-friend {
+.place {
   -webkit-text-stroke: 0.5px var(--black);
   height: 20px;
   letter-spacing: 0;
@@ -188,7 +215,7 @@
   width: 90px;
 }
 
-.manuline-2 {
+.manuline {
   height: 4px;
   left: 0;
   position: absolute;
@@ -196,7 +223,7 @@
   width: 1440px;
 }
 
-.user-picture-2 {
+.user-picture {
   background-color: var(--mist-gray);
   border-radius: 32px/32.5px;
   height: 65px;
@@ -206,22 +233,32 @@
   width: 64px;
 }
 
-.top-bar-3 {
-  height: 85px;
-  left: 0;
+.rectangle-5 {
+  background-color: var(--mist-gray);
+  height: 41px;
+  left: 231px;
   position: absolute;
-  top: 94px;
-  width: 1439px;
+  top: 198px;
+  width: 437px;
 }
 
-.friend-button-3 {
-  align-items: flex-start;
-  cursor: pointer;
-  display: flex;
-  height: 36px;
-  left: 515px;
-  min-width: 136px;
+.user-name {
+  background-color: transparent;
+  border: 0;
+  color: #00000075;
+  font-family: var(--font-family-roboto);
+  font-size: var(--font-size-xs);
+  font-weight: 400;
+  height: 23px;
+  left: 238px;
+  letter-spacing: 0;
+  padding: 0;
   position: absolute;
-  top: 0;
+  top: 207px;
+  width: 185px;
+}
+
+.user-name::placeholder {
+  color: #00000046;
 }
 
