--- a/frontend/src/Components/Split2/Split2.css
+++ b/frontend/src/Components/Split2/Split2.css
@@ -2,7 +2,7 @@
 .split {
   align-items: center;
   align-self: center;
-
+  background-image: url(split-button-1@2x.png);
   background-size: 100% 100%;
   cursor: pointer;
   display: flex;
